--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# newsanchor <img src="newsanchor.png" width="160px" align="right" />
+# newsanchor <img src="man/figures/newsanchor.png" width="160px" align="right" />
 
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active) 
 [![Build Status](https://travis-ci.org/CorrelAid/newsanchor.svg?branch=master)](https://travis-ci.org/CorrelAid/newsanchor)
